// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippet > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-8 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap;"
        >
          <span
            class="emotion-6 emotion-7"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="emotion-8 emotion-9"
        >
          <div
            aria-controls="«r1»"
            aria-describedby="«r1»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline  1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«r3»"
            aria-describedby="«r3»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="false"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6:before {
  color: #727683;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: '$';
  padding-right: 0.5rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«r9»"
            aria-describedby="«r9»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="false"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6:before {
  color: #727683;
  width: 35px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: counter(section);
  padding-right: 0.5rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«r6»"
            aria-describedby="«r6»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="false"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copiedText 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-8 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap;"
        >
          <span
            class="emotion-6 emotion-7"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="emotion-8 emotion-9"
        >
          <div
            aria-controls="«ri»"
            aria-describedby="«ri»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copyText 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-8 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap;"
        >
          <span
            class="emotion-6 emotion-7"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="emotion-8 emotion-9"
        >
          <div
            aria-controls="«rg»"
            aria-describedby="«rg»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with custom number of rows 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          />
        </pre>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«r10»"
            aria-describedby="«r10»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with hideText 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«rk»"
            aria-describedby="«rk»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="false"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Show 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with initiallyExpanded 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: none;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«rq»"
            aria-describedby="«rq»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="true"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Hide 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with noExpandable 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  max-height: calc(1.25rem * 4 + 1.5rem);
  overflow-y: scroll;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
        >
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </span>
          <span
            class="emotion-6 emotion-7"
            data-multiline="true"
          />
        </pre>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«r12»"
            aria-describedby="«r12»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with showText 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.emotion-22 {
  width: 100%;
  box-shadow: 0px -22px 19px -6px #f9f9fa;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

.emotion-28 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="false"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«rn»"
            aria-describedby="«rn»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="false"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Test 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6:before {
  color: #727683;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: '$';
  padding-right: 0.5rem;
}

.emotion-8 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap;"
        >
          <span
            class="emotion-6 emotion-7"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="emotion-8 emotion-9"
        >
          <div
            aria-controls="«rc»"
            aria-describedby="«rc»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6:before {
  color: #727683;
  width: 35px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  counter-increment: section;
  content: counter(section);
  padding-right: 0.5rem;
}

.emotion-8 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
  box-shadow: -27px 0 19px -11px #f9f9fa;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <pre
          class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          style="--qabug41: nowrap;"
        >
          <span
            class="emotion-6 emotion-7"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </pre>
        <div
          class="emotion-8 emotion-9"
        >
          <div
            aria-controls="«re»"
            aria-describedby="«re»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > should click on extend button to display full content on  1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  max-width: 100%;
  width: 100%;
  background: #f9f9fa;
  border-radius: 0.25rem;
}

.emotion-2 {
  width: 100%;
}

.emotion-2 {
  width: 100%;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-4 {
  margin: 0;
  padding: 1rem;
  padding-right: 4.5rem;
  overflow-x: auto;
  height: auto;
  counter-reset: section;
  overflow-y: hidden;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6 {
  display: block;
  white-space: pre;
}

.emotion-6:not([data-multiline]):after {
  content: "";
  padding-right: 4rem;
}

.emotion-6[data-multiline="true"]:nth-child(-n+2):after {
  content: "";
  padding-right: 4rem;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-20 {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1rem 1rem 0 0;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 2px solid transparent;
}

.emotion-22 {
  width: 100%;
  box-shadow: none;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-24 {
  width: 100%;
  background: none;
  border: none;
  padding: 1rem;
  padding-top: 0.5rem;
  cursor: pointer;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-28 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  transform-origin: center;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__mlltm91"
          data-is-animated="true"
          style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
        >
          <pre
            class="emotion-4 emotion-5 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_code__m4c9owy style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="emotion-6 emotion-7"
              data-multiline="true"
            />
          </pre>
        </div>
        <div
          class="emotion-20 emotion-21"
        >
          <div
            aria-controls="«rt»"
            aria-describedby="«rt»"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <button
              aria-label="Copy"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            aria-expanded="true"
            class="emotion-24 emotion-25"
            type="button"
          >
            <span
              class="emotion-26 emotion-27 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmallStrong__m4c9owo style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Hide 
              <svg
                class="emotion-28 emotion-29 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
